# IDA-FastAnalysis

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  ref_scanner.cpp  ref_scanner.h
src/ref_scanner_impl/: ref_scanner_aarch64.cpp  ref_scanner_aarch64.h  ref_scanner_x86_64.cpp  ref_scanner_x86_64.h
